--- a/readme
+++ b/readme
@@ -45,3 +45,23 @@ https://github.com/ultralytics/ultralytics/issues/1915
 
 ###
 전부 완료되면 jetson에서 추론 돌려보고 원하는 속도가 나오는지 확인
+
+
+
+## 가상환경 설정
+1. 켜는법
+cd uav2025
+./ros_noetic_env/Scripts/activate
+
+2. 끄는법
+deactivate
+
+3. 필요한 패키지 리스트 만들기(버전 관리)
+pip freeze > requirements.txt
+
+4. 동일한 환경 만들기
+python -m venv venv(원하는 이름)
+venv\Scripts\activate 
+pip install -r requirements.txt
+
+
